--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^15.5.4",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
